@@ -82,7 +82,6 @@ class DM:
                           self.username)
             self.username = 'root'
             self.uid, self.gid = 0, 0
-        os.environ['SUDO_USER'] = self.username
         self.homedir = pwd.getpwnam(self.username)[5]
         self.uid = int(self.uid)
         self.gid = int(self.gid)
@@ -260,8 +259,7 @@ EndSection
         os.environ['DISPLAY'] = self.display
         os.environ['HOME'] = self.homedir
         # Give ubiquity a UID and GID that it can drop privileges to.
-        os.environ['SUDO_UID'] = str(self.uid)
-        os.environ['SUDO_GID'] = str(self.gid)
+        os.environ['PKEXEC_UID'] = str(self.uid)
         os.environ['GVFS_DISABLE_FUSE'] = '1'
         # Overlay scrollbars are now a gtk module
         os.environ['GTK_MODULES'] = 'overlay-scrollbar'
